--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+.top-banner{
+    background-image: url("images/DEVELOPER.png");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 h1{
     font-size: 50px;
     font-weight: 500;
+    margin: 0;
+    padding: 0;
 }
 .me{
     font-size: 40px;
@@ -16,8 +25,46 @@ section .half-width{
     float: left;
     margin-left: 5%;
     padding-left: 2%;
+    margin-top: 80px;
+    padding-left: 35px;
 }
 .half-width img{
     width: 100%;
     margin-top: 0%;
+}
+section{
+    height: 700px;
+}
+.link{
+    color: white;
+    background-image: linear-gradient(lightsalmon, tomato);
+    padding: 9px 7px;
+    text-decoration: none;
+    border-radius: 3px;
+    font-family:'Times New Roman', Times, serif;
+    letter-spacing: 1px;
+}
+.dream{
+    background-image: url("images/rotate.png");
+    background-size: cover;
+}
+.color{
+    color: orange;
+}
+section .single-experience{
+    border: 1px solid gray;
+    box-shadow:  -5px 5px 20px;
+    width: 500px;
+    height: 250px;
+    border-radius: 5px;
+}
+.third{
+    margin-top: 50px;
+    background-image: url("images/half\ circle.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+}
+#full{
+    border-left: 7px solid;
 }
